   and automon.  See the built-in documentation for details.

Followme changes
-------------
 * A new option, 'I' has been added to app_followme.
   By setting this option, Asterisk will not update the caller with
   connected line changes when they occur.  This is similar to app_dial
   and app_queue.
 * The 'N' option is now ignored if the call is already answered.

RTP changes
-------------
 * A new option, 'probation' has been added to rtp.conf
   RTP in strictrtp mode can now require more than 1 packet to exit learning
   mode with a new source (and by default requires 4). The probation option
   allows the user to change the required number of packets in sequence to any
   desired value. Use a value of 1 to essentially restore the old behavior.
   Also, with strictrtp on, Asterisk will now drop all packets until learning
   mode has successfully exited. These changes are based on how pjmedia handles
   media sources and source changes.

Text Messaging
--------------
 * MESSAGE(from) for incoming SIP messages now returns "display-name" <uri>
   instead of simply the uri.  This is the format that MessageSend() can use
   in the from parameter for outgoing SIP messages.

res_corosync
------------
 * A new module, res_corosync, has been introduced.  This module uses the
   Corosync cluster enginer (http://www.corosync.org) to allow a local cluster
   of Asterisk servers to both Message Waiting Indication (MWI) and/or
   Device State (presence) information.  This module is very similar to, and
   is a replacement for the res_ais module that was in previous releases of
   Asterisk.

AGI
---
 * A new channel variable, AGIEXITONHANGUP, has been added which allows
   Asterisk to behave like it did in Asterisk 1.4 and earlier where the
   AGI application would exit immediately after a channel hangup is detected.
 * IPv6 addresses are now supported when using FastAGI (agi://).  Hostnames
   are resolved and each address is attempted in turn until one succeeds or